--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -9,15 +9,25 @@
 general {
         colors = true
         interval = 5
+        color_good = "#ffffff"
+        color_degraded = "#ffff88"
+        color_bad = "#ff0000"
 }
 
+order += "battery all"
+order += "volume master"
 order += "wireless _first_"
 order += "ethernet _first_"
-order += "battery all"
 order += "disk /"
-order += "load"
 order += "memory"
+order += "cpu_usage"
 order += "tztime local"
+
+
+volume master {
+        format = " %volume"
+        format_muted = ""
+}
 
 wireless _first_ {
         format_up = "%quality %essid"
@@ -35,22 +45,29 @@ battery all {
         status_bat = ''
         status_chr = ''
         status_unk = '?'
+        low_threshold = 15
+        threshold_type = time
 }
 
 disk "/" {
         format = " %avail"
+        low_threshold = 15
+	threshold_type = gbytes_avail
+        prefix_type = binary
 }
 
-load {
-        format = " %1min"
+cpu_usage {
+        format = " %usage"
+        max_threshold = 75
+	degraded_threshold = 25
 }
 
 memory {
-        format = " %used/%available"
-        threshold_degraded = "1G"
-        format_degraded = "MEMORY < %available"
+        format = " %percentage_used"
+        threshold_degraded = "20%"
+        threshold_critical = "10%"
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = " %Y-%m-%d %H:%M:%S"
 }
