--- a/.config/i3/config
+++ b/.config/i3/config
@@ -160,6 +160,10 @@ exec_always feh --bg-scale https://source.unsplash.com/1920x1080
 new_window pixel 1
 
 # bindings for volume control
-bindsym XF86AudioRaiseVolume exec "amixer -q sset Master,0 5+ unmute"
-bindsym XF86AudioLowerVolume exec "amixer -q sset Master,0 5- unmute"
-bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"
+bindsym XF86AudioRaiseVolume exec "amixer -q sset Master 5%+ unmute"
+bindsym XF86AudioLowerVolume exec "amixer -q sset Master 5%- unmute"
+bindsym XF86AudioMute exec "amixer -q sset Master toggle"
+
+# Sreen brightness controls
+bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
+bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
