--- a/.config/i3/config
+++ b/.config/i3/config
@@ -161,7 +161,7 @@ new_window pixel 1
 
 # bindings for volume control
 bindsym XF86AudioRaiseVolume exec "amixer -D pulse sset Master 3277+ unmute"
-bindsym XF86AudioLowerVolume exec "amixer -D pulse sset Master 3277+ unmute"
+bindsym XF86AudioLowerVolume exec "amixer -D pulse sset Master 3277- unmute"
 bindsym XF86AudioMute exec "amixer -D pulse sset Master toggle"
 
 # Sreen brightness controls
