--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,7 +30,7 @@ font xft:Fira Code 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -156,6 +156,7 @@ bar {
         status_command i3status
 }
 
+exec compton
 exec_always feh --bg-scale ~/wallpaper/cat.jpg
 new_window pixel 1
 
