--- a/.gitconfig
+++ b/.gitconfig
@@ -10,3 +10,14 @@
 	ci = commit
 	st = status
 	unstage = reset HEAD --
+        kdiff = difftool --no-symlinks --dir-diff
+[diff]
+    tool = kitty
+    guitool = kitty.gui
+[difftool]
+    prompt = false
+    trustExitCode = true
+[difftool "kitty"]
+    cmd = kitty +kitten diff $LOCAL $REMOTE
+[difftool "kitty.gui"]
+    cmd = kitty kitty +kitten diff $LOCAL $REMOTE
