--- a/.config/i3/config
+++ b/.config/i3/config
@@ -157,7 +157,7 @@ bar {
 }
 
 exec compton
-exec_always feh --bg-scale ~/.wallpaper.jpg
+exec_always feh --bg-scale https://picsum.photos/1920/1080
 new_window pixel 1
 
 # bindings for volume control
