--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,4 +4,4 @@ cursor_shape underline
 background_opacity 0.85
 cursor_stop_blinking_after 1.0
 enable_audio_bell no
-hide_window_decorations yes
+hide_window_decorations no
