--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,4 +5,4 @@ background_opacity 0.85
 cursor_stop_blinking_after 1.0
 enable_audio_bell no
 hide_window_decorations no
-active_border_color #ff9900
+active_border_color #7ee670
