--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,7 @@
 font_family Fira Code
 font_size 12.0
 cursor_shape underline
+cursor_underline_thickness 1.5
 background_opacity 0.85
 cursor_stop_blinking_after 1.0
 enable_audio_bell no
