--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,8 +2,10 @@ font_family Fira Code
 font_size 12.0
 cursor_shape underline
 cursor_underline_thickness 1.5
-background_opacity 0.85
+background_opacity 0.95
 cursor_stop_blinking_after 1.0
 enable_audio_bell no
 hide_window_decorations yes
 active_border_color #7ee670
+
+include ./colors.conf
