--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,4 +8,4 @@ enable_audio_bell no
 hide_window_decorations yes
 active_border_color #7ee670
 
-include ./color-schemes/ashes.dark
+include ./color-schemes/eighties.dark
