--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -20,7 +20,7 @@ order += "volume master"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "disk /"
-order += "memory"
+#order += "memory"
 order += "cpu_usage"
 order += "tztime local"
 
@@ -39,7 +39,7 @@ wireless _first_ {
 }
 
 ethernet _first_ {
-        format_up = " %speed "
+        format_up = "  %speed %ip "
         format_down = ""
 }
 
@@ -57,21 +57,21 @@ battery all {
 disk "/" {
         format = "  %avail "
         low_threshold = 15
-	threshold_type = gbytes_avail
+        threshold_type = gbytes_avail
         prefix_type = binary
 }
 
 cpu_usage {
         format = "  %usage "
         max_threshold = 75
-	degraded_threshold = 25
+        degraded_threshold = 25
 }
 
-memory {
-        format = "  %percentage_used "
-        threshold_degraded = "20%"
-        threshold_critical = "10%"
-}
+#memory {
+#        format = "  %percentage_used "
+#        threshold_degraded = "20%"
+#        threshold_critical = "10%"
+#}
 
 tztime local {
         format = "  %Y-%m-%d %H:%M:%S "
