--- a/.gitconfig
+++ b/.gitconfig
@@ -8,16 +8,6 @@
 	co = checkout
 	br = branch
 	ci = commit
-	st = status
+	st = status -sb
 	unstage = reset HEAD --
-        kdiff = difftool --no-symlinks --dir-diff
-[diff]
-    tool = kitty
-    guitool = kitty.gui
-[difftool]
-    prompt = false
-    trustExitCode = true
-[difftool "kitty"]
-    cmd = kitty +kitten diff $LOCAL $REMOTE
-[difftool "kitty.gui"]
-    cmd = kitty kitty +kitten diff $LOCAL $REMOTE
+
