--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,18 +1,2 @@
-set -g status-bg magenta
-set -g status-fg white
+set -g mode-keys vi
 
-set -g base-index 1
-
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
-
-bind r source-file ~/.tmux.conf
-
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
-bind -n M-k select-pane -U
-bind -n M-j select-pane -D
-
-set -g mouse on
