--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,4 +9,4 @@ unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 set -g default-terminal "screen-256color"
-set-option -g default-shell /bin/fish
+set-option -g default-shell /bin/bash
