--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,3 +10,6 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -se c -i
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 set -g default-terminal "screen-256color"
 set-option -g default-shell /bin/bash
+
+bind-key -n C-t new-window
+bind-key -n C-g choose-tree -Zw
